--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -7,6 +7,22 @@
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
+  
+
+  <scm>
+    <developerConnection>scm:git:http://jsergent@github.com/jsergent/MavenReleaseTest.git</developerConnection>
+  </scm>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.2</version>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
